--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Ollie Day",
+            "name": "Ollie Day"
         }
     ],
     "support": {
